fix: align heroes and start button

--- a/css/character_selection.css
+++ b/css/character_selection.css
@@ -11,7 +11,6 @@ body {
     text-transform: uppercase;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -43,6 +42,7 @@ img.lc-rocks, img.rc-rocks {
 .mid-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 img.mc-star {
@@ -51,14 +51,17 @@ img.mc-star {
 
 .heroes {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 img.hero {
-    max-width: 20%;
+    max-width: 25%;
 }
 
 img.mc-start {
-    max-width: 10%;
+    max-width: 13%;
+    margin: -30px;
 }
 
 img.rc-cloud {
